--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "countries-nested-selects",
+  "name": "mexico-nested-selects",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
